Fixed button span

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <h5 class="article-title light white">TOOFARGON</h5>
       <h2 class="caption white medium">A collective of free thoughts, illuminating the problems our world is facing.</h2>
       <div class="button-container">
-        <h4 class="collection"><a class="promt-button light" href="shop.html">COLLECTION <b>I</b></a></h4>
+        <h4 class="collection"><a class="promt-button light" href="shop.html">COLLECTION I</a></h4>
       </div>
       </div>
     </section>
